k8s/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fintrack
spec:
  replicas: 2
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: backend
          image: 706504242471.dkr.ecr.us-east-1.amazonaws.com/fintrack-backend:0.1.0
          ports: [{ containerPort: 8080 }]
          readinessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 20
          livenessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 60
      volumes:
        - name: db-init-sql
          configMap:
            name: db-init-sql
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fintrack
spec:
  selector: { app: backend }
  ports: [{ port: 8080, targetPort: 8080 }]
